Fix up spacing on header and background of bottom half of page on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@
   
   h1, h2 {
     padding-top: 4px;
+    line-height: 1em;
   }
   
   .contact a {
@@ -82,6 +83,11 @@
 	  color: #fff;
 	  background-color: transparent;
   }
+  
+  .explanation {
+	  background-color: transparent;
+  }
+  
 }
 
 
